dockerized and not running

--- a/flask/uwsgi.ini
+++ b/flask/uwsgi.ini
@@ -1,8 +1,11 @@
+; uwsgi.ini
 [uwsgi]
+uid = uwsgiuser
+gid = uwsgigroup
 wsgi-file = run.py
 callable = app
-socket = :8080
-; http = 0.0.0.0:8000
+; socket = :8080
+http = 0.0.0.0:8080
 processes = 4
 threads = 2
 master = true
