--- a/flask/uwsgi.ini
+++ b/flask/uwsgi.ini
@@ -4,8 +4,9 @@ uid = uwsgiuser
 gid = uwsgigroup
 wsgi-file = run.py
 callable = app
-; socket = :8080
-http = 0.0.0.0:8080
+socket = :5000
+; http = 0.0.0.0:5000
+static-map = /static=/app/app/static
 processes = 4
 threads = 2
 master = true
