--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,13 @@
 server {
-    listen 90;
+    listen 80;
 
     # Serve static files directly from NGINX
-    location /static {
-        alias /path/to/your/project/static;
+    location /app/app/static {
+        proxy_pass http://flask:8080/app/app/static;
     }
 
     location / {
         include uwsgi_params;
-        uwsgi_pass flask:8080;
+        uwsgi_pass flask:5000;
     }
 }
