--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,18 @@
-# docker-compose.yml
 version: "3.8"
 
 services:
-
   flask:
-    build: ./flask
     container_name: flask
     restart: always
     environment:
       - APP_NAME=MyFlaskApp
     expose:
       - "8080:5000"
+    image: gcr.io/inbound-lattice-388519/myflaskapp:0.0
 
   nginx:
-    build: ./nginx
     container_name: nginx
     restart: always
     ports:
       - 8080:80
+    image: gcr.io/inbound-lattice-388519/mynginx:0.0
